Add typeit js library

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <div class="nav__collapse w-100 d-flex aic jcb">
             <ul class="d-flex aic m-auto">
               <li><a href="#" class="nav-link underline">Start</a></li>
-              <li><a href="#" class="nav-link underline">Portfolio</a></li>
-              <li><a href="#" class="nav-link underline">Services</a></li>
-              <li><a href="#" class="nav-link underline">Team</a></li>
-              <li><a href="#" class="nav-link underline">Contact</a></li>
+              <li><a href="#portfolio" class="nav-link underline">Portfolio</a></li>
+              <li><a href="#clients" class="nav-link underline">Clients</a></li>
+              <li><a href="#services" class="nav-link underline">Services</a></li>
+              <li><a href="#contact" class="nav-link underline">Contact</a></li>
             </ul>
             <button class="nav-btn">
               <a href="#" class="link d-flex aic">
@@ -52,7 +52,6 @@
       </div>
     </div>
     <header class="section">
-
       <div class="header__title">
         <div class="container">
           <div class="header__content d-flex aic jcb">
@@ -78,7 +77,7 @@
         </div>
       </div>
     </header>
-    <section class="portfolio section">
+    <section id="portfolio" class="portfolio section">
       <div class="container">
         <div class="content__title d-flex aic jcb">
           <div class="__left">
@@ -120,7 +119,7 @@
         </button>
       </div>
     </section>
-    <section class="clients section">
+    <section id="clients" class="clients section">
       <div class="container">
         <div class="clients__content d-flex aic jcb">
           <div class="__left w-50">
@@ -163,10 +162,99 @@
         </div>
       </div>
     </section>
+    <section id="services" class="services section">
+      <div class="container">
+        <h2 class="tac">Our Services</h2>
+        <div class="__wrap d-flex aic jcb">
+          <div class="servic">
+            <div class="__title d-flex aic"><i class="fal fa-tachometer-slowest"></i>
+              <h3>Fast and Quickly</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+          <div class="servic">
+            <div class="__title d-flex aic"><i class="fal fa-browser"></i>
+              <h3>Build Responsive WebSites</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+          <div class="servic ">
+            <div class="__title d-flex aic"><i class="fal fa-shopping-basket"></i>
+              <h3>Online Shops</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+        </div>
+        <div class="__wrap d-flex aic jcb">
+          <div class="servic">
+            <div class="__title d-flex aic"><i class="fal fa-drafting-compass"></i>
+              <h3>Beutiful Design</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+          <div class="servic">
+            <div class="__title d-flex aic">
+              <i class="fal fa-mobile-android"></i>
+              <h3>All is Responsive</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+          <div class="servic ">
+            <div class="__title d-flex aic"><i class="fal fa-dollar-sign"></i>
+              <h3>Comfortable prices</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, itaque.</p>
+            <i class="fal fa-long-arrow-right"></i>
+          </div>
+        </div>
+
+        <button class="nav-btn m-auto tac project-add">
+          <a href="#!" class="link d-flex aic">
+            <span class="mask">
+              <div class="link-container">
+                <span class="link-title1 title">Explore Services</span>
+                <span class="link-title2 title">Explore Services</span>
+              </div>
+            </span>
+          </a>
+        </button>
+      </div>
+    </section>
+    <section class="get-start section">
+      <div class="container d-flex aic jcb">
+        <div class="__left">
+          <img src="./images/Image.png" alt="">
+        </div>
+        <div class="__right">
+          <h2 id="simpleUsage"> <br>
+            </h2>
+
+          <p>Ready to make something kickass?
+            Let's get on a call.</p>
+
+          <button class="nav-btn m-auto tac project-add">
+            <a href="#!" class="link d-flex aic">
+              <span class="mask">
+                <div class="link-container">
+                  <span class="link-title1 title">Get Started</span>
+                  <span class="link-title2 title">Get Started</span>
+                </div>
+              </span>
+            </a>
+          </button>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/fullpage.min.js"></script>
+<script src="https://unpkg.com/typeit@8.0.3/dist/index.umd.js"></script>
 <script src="./js/script.js"></script>
 
 </html>
