--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
         <div class="__right">
           <h2 id="simpleUsage"> <br>
-            </h2>
+          </h2>
 
           <p>Ready to make something kickass?
             Let's get on a call.</p>
@@ -250,10 +250,42 @@
         </div>
       </div>
     </section>
+    <section class="footer section">
+      <div class="container">
+        <div class="footer__parts">
+          <div class="__top d-flex fdrc aic jcc">
+            <a href="#" class="logo"><img src="./images/image 1.png" alt=""></a>
+            <div class="__textTitle tac d-flex fdrc">
+              <h2>Lets Talk with Me!</h2>
+              <p class="text">I am always open to discuss your project, improve your online presence or help with your UX/UI design
+              </p>
+            </div>
+            <ul class="smm__icons">
+              <i class="fab fa-telegram-plane"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-github"></i>
+            </ul>
+          </div>
+          <div class="__bottom d-flex aic jcb">
+            <ul class="footer-nav d-flex aic">
+              <li><a href="#" class="nav-link underline">Start</a></li>
+              <li><a href="#portfolio" class="nav-link underline">Portfolio</a></li>
+              <li><a href="#clients" class="nav-link underline">Clients</a></li>
+              <li><a href="#services" class="nav-link underline">Services</a></li>
+              <li><a href="#contact" class="nav-link underline">Contact</a></li>
+            </ul>
+            <a href="#!" class="gmail nav-link">
+              <i class="fal fa-envelope"></i>
+              bussinesnurmuhammad1803@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/fullpage.min.js"></script>
+<script src="./js/i18next.min.js"></script>
 <script src="https://unpkg.com/typeit@8.0.3/dist/index.umd.js"></script>
 <script src="./js/script.js"></script>
 
